--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/joy": "^5.0.0-beta.51",
     "@mui/material": "^6.4.6"
   },
   "devDependencies": {
