--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "@tanstack/react-query-devtools": "^5.68.0",
     "axios": "^1.8.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router": "^7.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
