--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/joy": "^5.0.0-beta.51",
-    "@mui/material": "^6.4.6"
+    "@mui/material": "^6.4.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "vite-plugin-mkcert": "^1.17.7"
