End of Section 9: use mobx

--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "@tanstack/react-query-devtools": "^5.68.0",
     "axios": "^1.8.1",
     "date-fns": "^4.1.0",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
