End of section 16: API Image upload

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CloudinarySettings": {
+    "CloudName": "dele9wunk",
+    "ApiKey": "983816873513856",
+    "ApiSecret": "Pl7ouY0GD3sDhUnjDCogTxyOMQw"
+  },
   "AllowedHosts": "*"
 }
