--- a/.gitignore
+++ b/.gitignore
@@ -486,4 +486,5 @@ $RECYCLE.BIN/
 API/reactivities.db-wal
 API/reactivities.db-shm
 API/reactivities.db
-
+API/appsettings.json
+API/appsettings.Development.json
