End of Section 18&19: Add profile update and introduce signalR

--- a/client/.env.development
+++ b/client/.env.development
@@ -1,2 +1,5 @@
 VITE_API_URL=https://localhost:3001/api
+VITE_COMMENT_URL=https://localhost:3001/comments
 VITE_API_LOCATIONIQ_TOKEN=pk.9f27c91932b23682e757b484d69c8f18
+
+
