--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -37,7 +37,7 @@ jobs:
     - name: dotnet publish 
       working-directory: ./API
       run: |
-        dotnet publish -c Release -o ".bin/Publish"
+        dotnet publish -c Release -o "./bin/myApp"
 
     # 部署到阿里云
     # - name: Deploy to Aliyun ECS
