--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -35,9 +35,8 @@ jobs:
       run: dotnet build --configuration Release
 
     - name: dotnet publish 
-      working-directory: ./API
       run: |
-        dotnet publish -c Release -o "./bin/myApp"
+        dotnet publish -c Release -o "./API/bin/myApp"
 
     # 部署到阿里云
     # - name: Deploy to Aliyun ECS
