try to deploy to ali 1

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -39,7 +39,9 @@ jobs:
 
     - name: dotnet publish 
       run: |
-        dotnet publish -c Release -o "./API/bin/myApp"
+        dotnet publish -c Release -o ./API/bin/myApp
+        
+    - run: ls -la ./API/bin/myApp
 
     # 部署到阿里云
     - name: Deploy to Aliyun ECS
